# prokoi

./: .env  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  SEED_DATA_README.md  doc.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  seed_data.py  seed_data.sql  simple_seed.py  simple_seed.sql  test_seed_fix.py  test_tools.py  todo.md
myapp/: app.js
myapp/config/: swagger.js
myapp/controllers/: usersController.js
myapp/db/: connection.js
myapp/middleware/: authMiddleware.js
myapp/repositories/: BaseRepository.js  OrgRepository.js  PermissionRepository.js  RolePermissionRepo.js  RoleRepository.js  organization_users.js  userRepository.js  userRoleRepository.js
myapp/routes/: users.js
myapp/schema/: 00_master_setup.sql  01_core_organizations.sql  02_teams_memberships.sql  03_workspaces_projects.sql  04_roles_permissions.sql  05_issues_workflow.sql  06_time_tracking.sql  07_agile_scrum.sql  08_boards_columns.sql  09_reporting_analytics.sql  10_attachments_notifications.sql  user.sql  userAndAcessControl.sql
myapp/service/: authService.js  userService.js  workspace.js
myapp/swagger_docs/: users.js
src/: app.py  seed.py
src/ai/: agent.py  llm_store.py  prompts.py  state.py  tool.py  tool_node.py  workflow.py
src/api/: analytics.py  bookmarks.py  cv_notes.py  cv_uploads.py  issue_skills.py  issue_types.py  issues.py  jobs.py  labels.py  notification.py  organization_requests.py  organizations.py  project_analysis.py  projects.py  resources.py  roadmaps.py  roles.py  skill_verification_tests.py  skills.py  sprint_velocity.py  sprints.py  team_members.py  team_performance.py  teams.py  user_performance.py  users.py  workspaces.py
src/core/: config.py  database.py  logger.py  security.py
src/dependencies/: auth.py  (+1 more)
(+106 files in other folders)
