[project]
name = "prokoi"
version = "0.1.0"
description = ""
authors = [
    {name = "mahdy",email = "heymahdymuzzammil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "cryptography (>=46.0.2,<47.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic[email] (>=2.11.10,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "mysql-connector-python (>=9.4.0,<10.0.0)",
    "faker (>=37.11.0,<38.0.0)",
    "langgraph (>=1.0.0,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
